# PythonCode

./: .gitignore  README.md  binning.py  class_dict.py  context.py  deque.py  dummy-web-server.py  exceptions.py  import.py  kernel-ec7f8e23-8153-4fb8-bee0-acf89b560763.json  lottery.py  multiple_inheritance.py  numpy_mask_average.py  object_view.py  parameters.py  queue.py  requirements.txt  runtime_inheritance.py  sans_log.py  sans_log2.py  sequence.py  solid_angle.py  test_setattr.py  test_uncertainties.py  tic-tac-toe.py  tictoc.py  timeout.py  write_tmp.py
Aiohttp/: client.py  server.py
Args/: args_kwargs.py
Async/: README.md  requirements.txt
Azimuth/: radial_integration_1.py
Benchmark/: README.md  integrate_c.c  setup.py
Binning/: adaptative1.py  adaptative2.py  binning.py  histogram_2d.py  histogram_2d_sans.py  rebin.py  rebin_sans.py
Blockchain/: blockchain.py  blockchain_orig.py
CFromPython/: c_module.c
Cassandra/: ex1.py  requirements.txt
CenterOfMass/: test1.py  test_axis.py
Clustering/: k_means.py
Config/: common.yaml  config.py  dev.yaml  env-template  prod.yaml
Crystallography/: reflection.py
Cuda/: README.md  demo_elementwise.py  demo_meta_template.py  dump_properties.py  hello_gpu.py  reduction.py
Design/: change_subclass_onthefly.py  sub_classing.py  sub_classing2.py  test4.py
Django/: README.md
Django_aux/: aux.py
Events/: database.py  observer_pattern.py
FFT/: filter.py  test5.py
Fabric/: fab_file1.py
Fitting/: constrained_least_square_fit.py  gaussian.py  (+11 more)
fastapi-pagination/: README.md  main.py  pyproject.toml
(+457 files in other folders)
