[tool.poetry]
name = "fapi-pag"
version = "0.1.0"
description = ""
authors = ["Ricardo Leal <ricleal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi-pagination = "^0.12.24"
fastapi-cli = "^0.0.3"
sqlalchemy = "^2.0.30"
sqlakeyset = "^2.0.1708907391"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
